--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -1,8 +1,9 @@
-/* .content-wrapper {
+.content-wrapper {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
+/* 
 .product-card {
   width: 200px;
   height: 300px;
