--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,4 @@
-.app-wrapper {
-  max-width: 1400px;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
 }
