--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,8 +13,9 @@
       <a><img src="../../assets/images/search.png" class="search-img"></a>
     </div>
     <div class='product-cart'>
+      <a href="#"><img src="../../assets/images/font-icon.png"></a>
       <a href="#"><img src=""></a>
-      <button (click)="toggle()" class="cart-btn"><span class="cart-underline">Корзина(0)</span></button>
+      <button (click)="toggle()" class="cart-btn"><span class="cart-underline">Корзина<span class="item-count">(0)</span></span></button>
     </div>
   <p *ngIf="!condition">
     <app-cart *ngFor='let item of productCart' [item]='item' (poductDelete)='productDelete($event)'></app-cart>
