--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer-wrapper">
+<!-- <div class="footer-wrapper">
   <h1>Интернет магазин отделки и декора интерьеров <span class="h1-gluts">GLUTS.RU</span></h1>
   <p>Мы рады приветствовать Вас на сайте компании «Глатс». У нас существует огромный ассортимент продукции для насыщения интерьера 
     и выгодные условия для заказчиков, архитекторов и дизайнеров. Мы можем предложить Вашему вниманию все необходимое для создания 
@@ -13,4 +13,9 @@
     представленные товары Вас непременно порадуют. На сайте Вы найдете модели светильников английской компании Tindle Lighting различных стилей для потолка, настенные и настольные, подвесные и напольные</p>
   <p>Мы рады предложить Вам свободу творчества, использовать в интерьере не то, что есть, а то, что необходимо для реализации идеи. 
     Обратившись к нам, вы обретете верных помощников для создания интерьера вашей мечты.</p>
-</div>
+</div> -->
+<footer>
+  <div class="footer-wrapper">
+    <p>Все права защищены Gluts 2016</p>
+  </div>
+</footer>
