--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,17 +1,45 @@
-<div class='content-wrapper'>
-  <div class="product-card" *ngFor='let item of products'>
-    <div class='wallpaper-photo'>
-      <img mat-card-image src="{{item.image}}" alt="Wallpaper photo">
+<div class="main-content-wrapper">
+  <div class='content-wrapper'>
+    <div class="product-card" *ngFor='let item of products'>
+      <div class='wallpaper-photo'>
+        <img mat-card-image src="{{item.image}}" alt="Wallpaper photo">
+      </div>
+      <div class="item-name">{{item.name}}</div>
+      <div class="normal-text">
+        <p>Артиул: {{item.articul}}</p></div>
+      <div>
+        <p>Бренд: <span class="bold-text">{{item.brand}}</span></p></div>
+      <div class="bold-text">
+        <p>Цена: {{item.price}}</p></div>
+      <div class='order-btn-wrapper'>
+        <button (click)='addToCart(item)' class='order-btn'>Заказать</button>
+      </div>
     </div>
-    <div class="item-name">{{item.name}}</div>
-    <div class="normal-text">
-      <p>Артиул: {{item.articul}}</p></div>
-    <div>
-      <p>Бренд: <span class="bold-text">{{item.brand}}</span></p></div>
-    <div class="bold-text">
-      <p>Цена: {{item.price}}</p></div>
-    <div class='order-btn-wrapper'>
-      <button (click)='addToCart(item)' class='order-btn'>Заказать</button>
-    </div>
+    <!-- <div class="pagination-wrapper">
+      <ul>
+        <li><a href="#"><</a></li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">></a></li>
+      </ul>
+    </div> -->
   </div>
+  <div class="description-wrapper">
+      <h1>Интернет магазин отделки и декора интерьеров <span class="h1-gluts">GLUTS.RU</span></h1>
+      <p class="description">Мы рады приветствовать Вас на сайте компании «Глатс». У нас существует огромный ассортимент продукции для насыщения интерьера 
+        и выгодные условия для заказчиков, архитекторов и дизайнеров. Мы можем предложить Вашему вниманию все необходимое для создания 
+        изысканного, уникального интерьера: обои, текстиль, аксессуары, ковры, мебель и светильники и многие другие предметы интерьера. У нас 
+        Вы найдете эксклюзивные обои известных европейских и американских брендов: шелковые обои от Paul Mongomery, изысканные бумажные обои от Sanderson , Zoffany и Morris &Co, английские обои ручной работы от Fromental , высококачественные обои необычного дизайна PierreFrey , 
+        инновационные обои Marburg.</p>
+      <p class="description">В богатой текстильной палитре известных мировых брендов соседствуют бархат и шелк, вельвет и жаккард. Использование тканей известных 
+        английских, немецких, французских, итальянских производителей, с которыми мы сотрудничаем, позволят со вкусом декорировать любые 
+        помещения. Предлагаемый ассортимент ковров из натурального волокна также разнообразен, приятной цветовой гаммы. Ковры выполнены
+        вручную из новозеландской и тибетской шерсти, льна и шелка.</p>
+      <p class="description">Роскошная мебель английских, немецких и итальянских марок, которую мы рады представить, никого не оставит равнодушным, а цены на 
+        представленные товары Вас непременно порадуют. На сайте Вы найдете модели светильников английской компании Tindle Lighting различных стилей для потолка, настенные и настольные, подвесные и напольные</p>
+      <p class="description">Мы рады предложить Вам свободу творчества, использовать в интерьере не то, что есть, а то, что необходимо для реализации идеи. 
+        Обратившись к нам, вы обретете верных помощников для создания интерьера вашей мечты.</p>
+    </div>
 </div>
