--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,24 @@
-
-  <div class='phones'>
-    <a href="tel:+38012343221">+38012343221</a>
-    <a href="tel:+38021234324">+38021234324</a>
+<header>
+  <div class="header-wrapper">
+    <div class='phones'>
+      <a href="tel:+74957732310">+7 (495) 773 23 10;</a>
+      <a href="tel:+74951716202">+7 (495) 171 62 02;</a>
+    </div>
+    <div class="nav-wrapper">
+      <div class='logo-img'>
+        <img src="../../assets/images/logo.png" alt="logo">
+      </div>
+      <div class='search'>
+        <input class='search-input' type='text' placeholder='Более 1000 товаров' />
+        <button class="search-img"><img src="../../assets/images/search.png"></button>
+      </div>
+      <div class='product-cart'>
+        <a href="#"><img src="../../assets/images/font-icon.png"></a>
+        <button (click)="toggle()" class="cart-btn"><span class="cart-underline">КОРЗИНА<span class="item-count">(0)</span></span></button>
+      </div>
+    <p *ngIf="!condition">
+      <app-cart *ngFor='let item of productCart' [item]='item' (poductDelete)='productDelete($event)'></app-cart>
+    </p>
+    </div>
   </div>
-  <div class="nav-wrapper">
-    
-    <div class='logo-img'>
-      <img src="../../assets/images/logo.png" alt="logo">
-    </div>
-    <div class='search'>
-      <input class='search-input' type='text' placeholder='Более 1000 товаров' />
-      <a><img src="../../assets/images/search.png" class="search-img"></a>
-    </div>
-    <div class='product-cart'>
-      <a href="#"><img src="../../assets/images/font-icon.png"></a>
-      <a href="#"><img src=""></a>
-      <button (click)="toggle()" class="cart-btn"><span class="cart-underline">Корзина<span class="item-count">(0)</span></span></button>
-    </div>
-  <p *ngIf="!condition">
-    <app-cart *ngFor='let item of productCart' [item]='item' (poductDelete)='productDelete($event)'></app-cart>
-  </p>
-  </div>
+</header>
