--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -31,4 +31,26 @@ p {
   margin: 15px 0;
 }
 
+.description-wrapper {
+  background: #f5f3f5;
+}
 
+.h1-gluts {
+  color: #7f7f80;
+}
+
+h1 {
+  color: #9054b2;
+  text-align: center;
+  padding: 45px 0;
+}
+
+.description {
+  padding: 0 190px 45px 100px;
+  font-size: 16px;
+  font-family: Open Sans Light;
+}
+
+.description:last-child {
+  margin-bottom: 0;
+}
