--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,16 +9,19 @@
         <img src="../../assets/images/logo.png" alt="logo">
       </div>
       <div class='search'>
-        <input class='search-input' type='text' placeholder='Более 1000 товаров' />
-        <button class="search-img"><img src="../../assets/images/search.png"></button>
+        <input class='search-input' type='text' #search (keyup.enter)="onEnter(search.value)" placeholder='Более 1000 товаров' />
+        <select [(ngModel)]="selectedOption" (ngModelChange)="onChange($event)" >
+          <option *ngFor="let option of options" [ngValue]="option"> {{option.name}} </option>
+        </select>
+        <button class="search-img" (click)="onEnter(search.value)"><img src="../../assets/images/search.png"></button>
       </div>
       <div class='product-cart'>
-        <a href="#"><img src="../../assets/images/font-icon.png"></a>
+        <a (click)="toggle()"><img src="../../assets/images/font-icon.png"></a>
         <button (click)="toggle()" class="cart-btn"><span class="cart-underline">КОРЗИНА<span class="item-count">(0)</span></span></button>
+        <div *ngIf="!condition" class="buy-list">
+          <app-cart *ngFor='let item of productCart' [item]='item' (poductDelete)='productDelete($event)'></app-cart>
+        </div>
       </div>
-    <p *ngIf="!condition">
-      <app-cart *ngFor='let item of productCart' [item]='item' (poductDelete)='productDelete($event)'></app-cart>
-    </p>
     </div>
   </div>
 </header>
