--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class='main-wrapper'>
   
-  <app-header (onEnterEvent) = "catchSearchEvent($event)" [productCart]='productCart'></app-header>
+  <app-header (onEnterEvent) = "catchSearchEvent($event)" [productCart]='productCart' [products]='products' [searchValue] = "searchValue"></app-header>
   
   <app-main-content [searchValue] = "searchValue" [products]='products' (pushToCart)='pushToCart($event)'></app-main-content>
   
