--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,7 +1,8 @@
 <div class="main-content-wrapper">
   <div class='content-wrapper'>
     <div *ngIf = "noResults()">No results</div>
-    <div class="product-card" *ngFor='let item of products | input: searchValue'>
+    <!-- <div class="product-card" *ngFor='let item of products | input: searchValue'></div> -->
+    <div class="product-card" *ngFor='let item of products'>
       <div class='wallpaper-photo'>
         <img mat-card-image src="{{item.image}}" alt="Wallpaper photo">
       </div>
