--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -13,6 +13,11 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+img {
+  width: 285px;
+  height: 255px;
+}
+
 .order-btn {
   width: 140px;
   height: 35px;
@@ -28,7 +33,7 @@
 }
 
 p {
-  margin: 15px 0;
+  margin: 10px 0;
 }
 
 .description-wrapper {
